--- a/final project/final project/final project.vcxproj
+++ b/final project/final project/final project.vcxproj
@@ -64,12 +64,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DataBase.cpp" />
     <ClCompile Include="Helper.cpp" />
     <ClCompile Include="Server.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="WSAInitializer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DataBase.h" />
     <ClInclude Include="Helper.h" />
     <ClInclude Include="Server.h" />
     <ClInclude Include="WSAInitializer.h" />
