--- a/final project/final project/final project.vcxproj
+++ b/final project/final project/final project.vcxproj
@@ -64,25 +64,31 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="final project\DataBase.h" />
-    <ClInclude Include="final project\Game.h" />
-    <ClInclude Include="final project\Helper.h" />
-    <ClInclude Include="final project\Question.h" />
-    <ClInclude Include="final project\Room.h" />
-    <ClInclude Include="final project\TriviaServer.h" />
-    <ClInclude Include="final project\user.h" />
-    <ClInclude Include="final project\WSAInitializer.h" />
+    <ClInclude Include="DataBase.h" />
+    <ClInclude Include="Game.h" />
+    <ClInclude Include="Helper.h" />
+    <ClInclude Include="Question.h" />
+    <ClInclude Include="RecievedMeassage.h" />
+    <ClInclude Include="Room.h" />
+    <ClInclude Include="sqlite3.h" />
+    <ClInclude Include="stdafx.h" />
+    <ClInclude Include="TriviaServer.h" />
+    <ClInclude Include="user.h" />
+    <ClInclude Include="WSAInitializer.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="final project\DataBase.cpp" />
-    <ClCompile Include="final project\Game.cpp" />
-    <ClCompile Include="final project\Helper.cpp" />
-    <ClCompile Include="final project\RecievedMeassage.cpp" />
-    <ClCompile Include="final project\Room.cpp" />
-    <ClCompile Include="final project\Source.cpp" />
-    <ClCompile Include="final project\TriviaServer.cpp" />
-    <ClCompile Include="final project\user.cpp" />
-    <ClCompile Include="final project\WSAInitializer.cpp" />
+    <ClCompile Include="DataBase.cpp" />
+    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Helper.cpp" />
+    <ClCompile Include="Question.cpp" />
+    <ClCompile Include="RecievedMeassage.cpp" />
+    <ClCompile Include="Room.cpp" />
+    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="sqlite3.c" />
+    <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="TriviaServer.cpp" />
+    <ClCompile Include="user.cpp" />
+    <ClCompile Include="WSAInitializer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
