--- a/final project/final project/final project.vcxproj
+++ b/final project/final project/final project.vcxproj
@@ -69,7 +69,7 @@
     <ClInclude Include="Helper.h" />
     <ClInclude Include="Protocol.h" />
     <ClInclude Include="Question.h" />
-    <ClInclude Include="RecievedMeassage.h" />
+    <ClInclude Include="RecievedMessage.h" />
     <ClInclude Include="Room.h" />
     <ClInclude Include="sqlite3.h" />
     <ClInclude Include="stdafx.h" />
@@ -82,7 +82,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Helper.cpp" />
     <ClCompile Include="Question.cpp" />
-    <ClCompile Include="RecievedMeassage.cpp" />
+    <ClCompile Include="RecievedMessage.cpp" />
     <ClCompile Include="Room.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="sqlite3.c" />
