--- a/final project/final project/final project.vcxproj
+++ b/final project/final project/final project.vcxproj
@@ -73,6 +73,7 @@
     <ClInclude Include="Room.h" />
     <ClInclude Include="sqlite3.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="targetver.h" />
     <ClInclude Include="TriviaServer.h" />
     <ClInclude Include="user.h" />
     <ClInclude Include="Validator.h" />
