More of client, need to see what the problem is with leaving the room and to make games work

--- a/final project/client/client.vcxproj
+++ b/final project/client/client.vcxproj
@@ -67,11 +67,13 @@
     <ClInclude Include="Client.h" />
     <ClInclude Include="Helper.h" />
     <ClInclude Include="Protocol.h" />
+    <ClInclude Include="CRoom.h" />
     <ClInclude Include="WSAInitializer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Client.cpp" />
     <ClCompile Include="Helper.cpp" />
+    <ClCompile Include="CRoom.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="WSAInitializer.cpp" />
   </ItemGroup>
