--- a/final project/client/client.vcxproj.filters
+++ b/final project/client/client.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="CRoom.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CGame.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source.cpp">
@@ -45,6 +48,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CRoom.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CGame.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
